# internal/models/domain.go
@@ -1,0 +1,83 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// Domain domain
+//
+// swagger:model domain
+type Domain struct {
+
+	// auth code
+	AuthCode string `json:"auth_code,omitempty"`
+
+	// auto renew
+	AutoRenew bool `json:"auto_renew,omitempty"`
+
+	// auto renew at
+	AutoRenewAt string `json:"auto_renew_at,omitempty"`
+
+	// created at
+	CreatedAt string `json:"created_at,omitempty"`
+
+	// expires at
+	ExpiresAt string `json:"expires_at,omitempty"`
+
+	// id
+	ID string `json:"id,omitempty"`
+
+	// name
+	Name string `json:"name,omitempty"`
+
+	// registered at
+	RegisteredAt string `json:"registered_at,omitempty"`
+
+	// renewal price
+	RenewalPrice string `json:"renewal_price,omitempty"`
+
+	// transferred at
+	TransferredAt string `json:"transferred_at,omitempty"`
+
+	// updated at
+	UpdatedAt string `json:"updated_at,omitempty"`
+
+	// user id
+	UserID string `json:"user_id,omitempty"`
+}
+
+// Validate validates this domain
+func (m *Domain) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this domain based on context it is used
+func (m *Domain) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Domain) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Domain) UnmarshalBinary(b []byte) error {
+	var res Domain
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
